apps/overlays/prod/atlantis/networking/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: internal
    namespace: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: networking
spec:
  gatewayClassName: internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: vault-tls
      hostname: vault.ninhu.xyz
      protocol: TLS
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TLSRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.ninhu.xyz/internal-access: "true"
